[package]
name = "owe-explorer"
version = "0.1.0"
authors = ["nikorisoft"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12"

[[bin]]
name = "owe-explorer"
path = "src/main.rs"

[[bin]]
name = "calc-mileage"
path = "src/calc-mileage.rs"

[[bin]]
name = "country-map"
path = "src/country-map.rs"
